--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name" : "just-core/http-optimization",
-	"description" : "PHP Enterprise HA Framework",
+	"description" : "Static asset management, js, css etc. Compile to reduce http request load, minify to reduce http load times",
 	"license" : "GNU",
 	"keywords" : [
 		"just-core",
@@ -8,13 +8,15 @@
 		"Enterprise",
 		"HA",
 		"Framework",
-	  "http",
-	  "optimization"
+		"http",
+		"presentation layer",
+	 	"optimization"
 	],
 	"version" : "0.*",
 	"homepage" : "https://github.com/CHGLongStone/just-core-http-optimization",
 	"require" : {
 		"php" : ">=5.3.3",
+		"just-core/foundation" : "dev-master"
 		"kriswallsmith/assetic" : "v1.3.2",
 		"mrclay/minify" : "2.3.0",
 		"natxet/CssMin": "v3.0.4"
