--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	 	"optimization"
 	],
 	"version" : "0.*",
-	"homepage" : "https://github.com/CHGLongStone/just-core-http-optimization",
+	"homepage" : "https://chglongstone.github.io/just-core-http-optimization",
 	"require" : {
 		"php" : ">=5.3.3",
 		"just-core/foundation" : "dev-master",
