--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "just-core/http-optimization",
 	"description" : "Static asset management, js, css etc. Compile to reduce http request load requests, minify to reduce http load times",
-	"license" : "GNU",
+	"license" : "MIT",
 	"keywords" : [
 		"just-core",
 		"Service Oriented Architechture",
